--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xan",
-  "version": "0.14.0",
+  "version": "0.17.0",
   "description": "Build tool for xander.",
   "main": "index.js",
   "scripts": {
@@ -37,6 +37,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "handlebars": "^4.0.5",
     "highlight.js": "^9.6.0",
     "json-loader": "^0.5.7",
