--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "metalsmith": "^2.1.0",
     "metalsmith-in-place": "^1.4.4",
     "metalsmith-layouts": "^1.4.1",
-    "metalsmith-markdown": "^0.2.1",
+    "metalsmith-markdown": "^0.2.2",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-remarkable": "git+https://github.com/mulyoved/metalsmith-remarkable.git",
     "raw-loader": "^0.5.1",
@@ -59,6 +59,7 @@
     "rimraf": "^2.4.3",
     "webpack": "^3.10.0",
     "webpack-dev-middleware": "^2.0.2",
-    "webpack-hot-middleware": "^2.21.0"
+    "webpack-hot-middleware": "^2.21.0",
+    "xander": "^0.10.0"
   }
 }
