--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["env", "react"],
-  "plugins": ["react-hot-loader/babel"]
+  "plugins": ["syntax-dynamic-import", "react-hot-loader/babel"]
 }
