--- a/default-site/package.json
+++ b/default-site/package.json
@@ -6,6 +6,12 @@
   },
   "author": "",
   "license": "ISC",
+  "devDependencies" :{
+    "css-loader": "^0.28.7",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0"
+  },
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
