--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xan",
-  "version": "0.27.0",
+  "version": "0.28.0",
   "description": "Build tool for xander.",
   "main": "index.js",
   "scripts": {
@@ -36,6 +36,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^6.4.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "handlebars": "^4.0.5",
@@ -46,19 +47,18 @@
     "koa-front-matter-views": "^2.0.6",
     "koa-static": "^2.0.0",
     "koa-webpack-dev-middleware": "^1.2.2",
-    "metalsmith": "^2.1.0",
-    "metalsmith-in-place": "^1.4.4",
-    "metalsmith-layouts": "^1.4.1",
-    "metalsmith-markdown": "^0.2.1",
+    "metalsmith": "^2.3.0",
+    "metalsmith-in-place": "^4.1.1",
+    "metalsmith-layouts": "^2.1.0",
+    "metalsmith-markdown": "^0.2.2",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-remarkable": "git+https://github.com/mulyoved/metalsmith-remarkable.git",
     "raw-loader": "^0.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
-    "rimraf": "^2.4.3",
-    "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^2.0.2",
-    "webpack-hot-middleware": "^2.21.0"
+    "webpack": "^4.5.0",
+    "webpack-dev-middleware": "^3.1.2",
+    "webpack-hot-middleware": "^2.22.0"
   }
 }
